Fri Jan 11 13:42:06 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/apps/tsql.c:
	- fix compile problem for MacOSX

Fri Jan 11 10:42:58 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c: make it work with Sybase
	* configure.ac: test for poll function

Fri Jan 11  9:29:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* README: merged

Thu Jan 10 17:55:41 EST 2008	JK Lowden <jklowden@freetds.org>
	* include/tds_sysdep_private.h src/tds/net.c
	- moved some preprocessor logic to the header file
	* INSTALL.CVS NEWS TODO doc/userguide.sgml
	- updated documentation

Thu Jan 10 22:19:26 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cancel.c src/odbc/unittests/hidden.c:
	- memory fixes

Thu Jan 10 17:04:15 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/.cvsignore src/odbc/unittests/Makefile.am:
	* src/odbc/unittests/cancel.c(added):
	- add test for SQLCancel

Thu Jan 10 16:28:44 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/blob1.c src/odbc/unittests/cursor3.c:
	* src/odbc/unittests/cursor4.c src/odbc/unittests/cursor5.c:
	- use temporary tables

Thu Jan 10 16:25:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/README.releasing misc/freetds_autobuild: updates

Thu Jan 10 14:10:28 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am src/odbc/unittests/blob1.c(added):
	- fix problem with SQLGetData and blobs

Thu Jan 10 09:46:41 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO src/odbc/odbc.c src/odbc/unittests/.cvsignore:
	* src/odbc/unittests/Makefile.am:
	- small fix for hidden fields (ignore them entirely)

Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
	* ChangeLog  truncated because of release
	* ChangeLog-0.82 added because of release
	
$Id: ChangeLog,v 1.2466 2008/01/11 12:43:39 freddy77 Exp $