@@ -1,3 +1,7 @@
+Sat Jan 12  1:13:30 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/blob1.c: small fix for 64bit
+	* src/tds/net.c: fix for heavy loads
+
 Fri Jan 11 13:42:06 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* configure.ac src/apps/tsql.c:
 	- fix compile problem for MacOSX
@@ -46,4 +50,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2466 2008/01/11 12:43:39 freddy77 Exp $
+$Id: ChangeLog,v 1.2467 2008/01/12 00:14:11 freddy77 Exp $
